--- a/assets/locales/es/translation.json
+++ b/assets/locales/es/translation.json
@@ -123,5 +123,8 @@
       "input3": "Mensaje",
       "button": "Enviar mensaje"
     }
+  },
+  "footerSection": {
+    "copy": "© 2024 American Trading Foods - Todos los derechos reservados."
   }
 }
